--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -153,6 +153,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#00000000"
+                android:onClick="shop_imageButton_onClick"
                 app:srcCompat="@drawable/shop" />
 
 <!--            <Space-->
